--- a/app/views/my/account.html.erb
+++ b/app/views/my/account.html.erb
@@ -4,7 +4,13 @@
 </div>
 <h2><%=l(:label_my_account)%></h2>
 <%= error_messages_for 'user' %>
-<%= error_messages_for :gitolite_public_key %>
+<% if @gitolite_public_key.errors.any? %>
+<ul>
+<% @gitolite_public_key.errors.full_messages.each do |msg| %>
+<li><%= msg %></li>
+<% end %>
+</ul>
+<% end %>
 
 <div class="splitcontentleft">
 	<% labelled_form_for :user, @user, :url => { :action => "account" }, :html => { :id => 'my_account_form' } do |f| %>
