--- a/app/views/my/account.rhtml
+++ b/app/views/my/account.rhtml
@@ -7,7 +7,7 @@
 <% #error_messages_for :gitolite_public_key %>
 
 <div class="splitcontentleft">
-	<% form_for :user, @user, :url => { :action => "account" },
+	<%= form_for :user, @user, :url => { :action => "account" },
 					:builder => TabularFormBuilder,
 					:lang => current_language,
 					:html => { :id => 'my_account_form' } do |f| %>
@@ -64,7 +64,7 @@
 
 	<div class="box">
 		<h4><%=l(:label_public_key_new)%></h4>
-		<% form_for :public_key, @gitolite_public_key, :url => { :controller => 'gitolite_public_keys', :action => "create" }, :builder => TabularFormBuilder, :lang => current_language do |f| %>
+		<%= form_for :public_key, @gitolite_public_key, :url => { :controller => 'gitolite_public_keys', :action => "create" }, :builder => TabularFormBuilder, :lang => current_language do |f| %>
 			<p>
 				<label for="public_key_title"><%=l(:field_identifier)%></label>
 				<br/>
