--- a/app/views/my/account.html.erb
+++ b/app/views/my/account.html.erb
@@ -13,7 +13,7 @@
 <% end %>
 
 <div class="splitcontentleft">
-	<% labelled_form_for :user, @user, :url => { :action => "account" }, :html => { :id => 'my_account_form' } do |f| %>
+	<%= labelled_form_for :user, @user, :url => { :action => "account" }, :html => { :id => 'my_account_form' } do |f| %>
 	<fieldset class="box tabular">
 		<legend><%=l(:label_information_plural)%></legend>
 		<p><%= f.text_field :firstname, :required => true %></p>
